option cc_generic_services = true;

message ReceiverData {
  required int32 id = 1;
  required int32 sample_count = 2;
  required bool  complex = 3;
  required int64 time_secs = 4;
  required double time_fraction = 5;
  repeated double samples = 6 [packed=true];
}

message ReceiverMeta {
  required int32 id = 1;
  optional double centerFrequency = 2;
  optional double bandwith = 3;
}

message StartResponse {
  required int32 id = 1;
}

message StartRequest {
  required int32 id = 1;
}

service StartReceiver {
  rpc Start(StartRequest) returns (StartResponse);
}
