syntax = "proto3";

message Data {
  int64 timeSeconds = 1;
  double timeFraction = 2;
  int32  counter = 3;
  repeated float samples = 4;
}

message StartData {
}

message StopData {
}



